Table: Ajuste Regra Horizontal e renomeando e adicionando alguns testes